tests/baselines/reference/errorElaboration.errors.txt
tests/cases/compiler/errorElaboration.ts(12,5): error TS2345: Argument of type '() => Container<Ref<string>>' is not assignable to parameter of type '() => Container<Ref<number>>'.
  Type 'Container<Ref<string>>' is not assignable to type 'Container<Ref<number>>'.
    Type 'Ref<string>' is not assignable to type 'Ref<number>'.
      Type 'string' is not assignable to type 'number'.
tests/cases/compiler/errorElaboration.ts(17,11): error TS2322: Type '"bar"' is not assignable to type '"foo"'.


==== tests/cases/compiler/errorElaboration.ts (2 errors) ====
    // Repro for #5712
    
    interface Ref<T> {
        prop: T;
    }
    interface Container<T> {
        m1: Container<Ref<T>>;
        m2: T;
    }
    declare function foo(x: () => Container<Ref<number>>): void;
    let a: () => Container<Ref<string>>;
    foo(a);
        ~
!!! error TS2345: Argument of type '() => {|Container|0|}<{|Ref|1|}<string>>' is not assignable to parameter of type '() => {|Container|2|}<{|Ref|3|}<number>>'.
!!! error TS2345:   Type '{|Container|4|}<{|Ref|5|}<string>>' is not assignable to type '{|Container|6|}<{|Ref|7|}<number>>'.
!!! error TS2345:     Type '{|Ref|8|}<string>' is not assignable to type '{|Ref|9|}<number>'.
!!! error TS2345:       Type 'string' is not assignable to type 'number'.
!!! annotated symbol 0 tests/cases/compiler/errorElaboration.ts:6:11
!!! annotated symbol 1 tests/cases/compiler/errorElaboration.ts:3:11
!!! annotated symbol 2 tests/cases/compiler/errorElaboration.ts:6:11
!!! annotated symbol 3 tests/cases/compiler/errorElaboration.ts:3:11
!!! annotated symbol 4 tests/cases/compiler/errorElaboration.ts:6:11
!!! annotated symbol 5 tests/cases/compiler/errorElaboration.ts:3:11
!!! annotated symbol 6 tests/cases/compiler/errorElaboration.ts:6:11
!!! annotated symbol 7 tests/cases/compiler/errorElaboration.ts:3:11
!!! annotated symbol 8 tests/cases/compiler/errorElaboration.ts:3:11
!!! annotated symbol 9 tests/cases/compiler/errorElaboration.ts:3:11
    
    // Repro for #25498
    
    function test(): {[A in "foo"]: A} {
      return {foo: "bar"};
              ~~~
!!! error TS2322: Type '"bar"' is not assignable to type '"foo"'.
!!! related TS6500 tests/cases/compiler/errorElaboration.ts:16:18: The expected type comes from property 'foo' which is declared here on type '{ foo: "foo"; }'
    }
    